AT2 COM INICIO CSS

--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lovePETS</title>
+    <title>ONG lovePETS</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <h1>
-            <a href="index.html">lovePETS</a>
+            <a href="index.html">ONG lovePETS</a>
         </h1>
         <nav>
-            <ul>
+             <ul>
                 <li><a href="index.html">lovePETS</a></li>
                 <li><a href="projeto.html">Projeto</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
+        </nav>     
     </header>
-    
+    <main>
+        <section>
+            <h3>Quem somos</h3>
+            <p>Na lovePETS ONG, acreditamos no poder transformador do amor e da
+                 compaixão por todos os animais. Somos uma organização sem fins lucrativos, nascida 
+                 do sonho de um grupo de voluntários dedicados, unidos pela paixão em resgatar, proteger e propo
+                 rcionar uma segunda chance a cães e gatos em situação de vulnerabilidade.</p>
+            <img src="imagens/img1.jpg" alt="">
+        </section>
+    </main>
 </body>
 </html>
