AT3 INICIAR CONTEUDO DAS PAG

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         </h1>
         <nav>
              <ul>
-                <li><a href="index.html">lovePETS</a></li>
+                <li><a href="index.html">lovePETS </a></li> 
                 <li><a href="projeto.html">Projeto</a></li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="adote.html">Adote</a></li>
+                <li><a href="doação.html">Doação</a></li>
+                <li><a href="cadastro.html">Login</a></li>
             </ul>
         </nav>     
     </header>
