--- a/cadastro.html
+++ b/cadastro.html
@@ -10,7 +10,27 @@
     <header>
         <h1>
             <a href="index.html">Inicio</a>
+        </h1>
     </header>
+
+    <main>
+        <section>
+            <h3>Area de Login</h3>
+            <form action="">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required><br><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha" required><br><br>
+
+                <input type="submit" value="Cadastrar/Login">
+            </form>
+        </section>
+    </main>
+    
     
 </body>
 </html>
