--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
                  rcionar uma segunda chance a cães e gatos em situação de vulnerabilidade.</p>
             <img src="imagens/img1.jpg" alt="">
         </section>
+        <selection>
+            <h2>lovePETS</h2>
+            <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
+            <img src="imagens/img2.jpg" alt="">
+
+        </selection>
+        <selection>
+            <h5>Contato com a ONG lovePETS</h5>
+            <address>
+                <p>Endereço: Rua das Flores, 123 - São Paulo, SP
+                Telefone: (11) 1234-5678
+                Email:ONGLOVEPETS@GMAIL.COM</p>
+                     <footer>
+        <p>&copy; 2025 ONG lovePETS. Todos os direitos reservados.</p>
     </main>
 </body>
 </html>
