--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                  rcionar uma segunda chance a cães e gatos em situação de vulnerabilidade.</p>
             <img src="imagens/img1.jpg" alt="">
         </section>
-        <selection>
+        <section>
             <h2>lovePETS</h2>
             <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
             <img src="imagens/img2.jpg" alt="">
 
-        </selection>
-        <selection>
+        </section>
+        <section>
             <h5>Contato com a ONG lovePETS</h5>
             <address>
                 <p>Endereço: Rua das Flores, 123 - São Paulo, SP
@@ -44,6 +44,8 @@
                 Email:ONGLOVEPETS@GMAIL.COM</p>
                      <footer>
         <p>&copy; 2025 ONG lovePETS. Todos os direitos reservados.</p>
+        </section>
+            
     </main>
 </body>
 </html>
