--- a/projeto.html
+++ b/projeto.html
@@ -12,6 +12,33 @@
             <a href="index.html">Inicio</a>
         </h1>
     </header>
+    <main>
+        <section>
+            <h2>PETS RESGATADOS</h2>
+            <p>Nosso projeto na lovePETS ONG é dedicado a resgatar, cuidar e encontrar lares amorosos para cães e gatos abandonados. Acreditamos que todos os animais merecem uma segunda chance e trabalhamos incansavelmente para proporcionar um futuro melhor para eles.</p>
+            <img src="imagens/do1.webp" alt="">
+            <img src="imagens/do7.webp" alt="">
+            <img src="imagens/do6.webp" alt="">
+            <img src="imagens/do4.webp" alt="">
+            <img src="imagens/ga2.webp" alt="">
+            <img src="imagens/ga1.webp" alt="">
+            <br>
+            <img src="imagens/do3.webp" alt="">
+            <br>
+            <img src="imagens/ga3.webp" alt="">
+        
+
+        </section>
+        <section>
+            <h5>Contato com a ONG lovePETS</h5>
+            <address>
+                <p>Endereço: Rua das Flores, 123 - São Paulo, SP
+                Telefone: (11) 1234-5678
+                Email:ONGLOVEPETS@GMAIL.COM</p>
+                     <footer>
+        <p>&copy; 2025 ONG lovePETS. Todos os direitos reservados.</p>
+        </section>
+    </main>
     
 </body>
 </html>
