mudança de tema e ajustes finais

--- a/index.html
+++ b/index.html
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONG lovePETS</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Semente do Bem | Início</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>
-            <a href="index.html">ONG lovePETS</a>
-        </h1>
+        <h1>Semente do Bem</h1>
         <nav>
-             <ul>
-                <li><a href="index.html">lovePETS </a></li> 
-                <li><a href="projeto.html">Projeto</a></li>
-                <li><a href="adote.html">Adote</a></li>
-                <li><a href="doação.html">Doação</a></li>
-                <li><a href="cadastro.html">Login</a></li>
+            <button class="menu-toggle" id="menu-toggle-btn">☰</button>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="Projeto.html">Nossos Projetos</a></li>
+                <li><a href="Voluntário.html">Seja Voluntário</a></li>
             </ul>
-        </nav>     
+        </nav>
     </header>
-    <main>
-        <section>
-            <h3>Quem somos</h3>
-            <p>Na lovePETS ONG, acreditamos no poder transformador do amor e da
-                 compaixão por todos os animais. Somos uma organização sem fins lucrativos, nascida 
-                 do sonho de um grupo de voluntários dedicados, unidos pela paixão em resgatar, proteger e propo
-                 rcionar uma segunda chance a cães e gatos em situação de vulnerabilidade.</p>
-            <img src="imagens/img1.jpg" alt="">
-        </section>
-        <section>
-            <h2>lovePETS</h2>
-            <p>Promover dignidade e oportunidade de acolhimento aos animais abandonados</p>
-            <img src="imagens/img2.jpg" alt="">
 
-        </section>
-        <section>
-            <h5>Contato com a ONG lovePETS</h5>
-            <address>
-                <p>Endereço: Rua das Flores, 123 - São Paulo, SP
-                Telefone: (11) 1234-5678
-                Email:ONGLOVEPETS@GMAIL.COM</p>
-                     <footer>
-        <p>&copy; 2025 ONG lovePETS. Todos os direitos reservados.</p>
-        </section>
-            
+    <main>
+        <h2>Nossa Missão</h2>
+        <p>Acreditamos que, juntos podemos construir um futuro melhor. Nossa Missão é Acolher e transformar vidas em situação de vulnerabilidade, promovendo o bem-estar e a solidariedade humana.</p>
+
+        <h2>O que fazemos</h2>
+        <p>Desenvolvemos iniciativas e programas que buscam garantir o acesso a necessidades básicas (como alimentação e acolhimento), oferecer suporte educacional e profissionalizante, e promover o bem-estar emocional. Através de ações de voluntariado e projetos comunitários, trabalhamos para fortalecer a autoestima, a autonomia e a solidariedade, transformando a realidade de indivíduos e famílias em vulnerabilidade</p>
+
+        <h2>Junte-se a nós</h2>
+        <p>Explore nossos projetos e veja como você pode fazer a diferença</p>
+        <div class="cta-actions">
+            <a href="Projeto.html" class="btn-primary">Ver Projetos</a>
+            <a href="Voluntário.html" class="btn-secondary">Quero ser Voluntário</a>
+        </div>
     </main>
+
+    <footer>
+        <p>&copy; 2023 Semente do Bem. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
