--- a/projeto.html
+++ b/projeto.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto lovePETS</title>
-    <link rel="stylesheet" href="projeto.css">
+    <title>Nossos Projetos | Semente do Bem</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>
-            <a href="index.html">Inicio</a>
-        </h1>
+        <h1>Semente do Bem</h1>
+        <nav>
+            <button class="menu-toggle" id="menu-toggle-btn">☰</button>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="Projeto.html">Nossos Projetos</a></li>
+                <li><a href="Voluntário.html">Seja Voluntário</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section>
-            <h2>PETS RESGATADOS</h2>
-            <p>Nosso projeto na lovePETS ONG é dedicado a resgatar, cuidar e encontrar lares amorosos para cães e gatos abandonados. Acreditamos que todos os animais merecem uma segunda chance e trabalhamos incansavelmente para proporcionar um futuro melhor para eles.</p>
-            <img src="imagens/do1.webp" alt="">
-            <img src="imagens/do7.webp" alt="">
-            <img src="imagens/do6.webp" alt="">
-            <img src="imagens/do4.webp" alt="">
-            <img src="imagens/ga2.webp" alt="">
-            <img src="imagens/ga1.webp" alt="">
-            <br>
-            <img src="imagens/do3.webp" alt="">
-            <br>
-            <img src="imagens/ga3.webp" alt="">
-        
 
+    <main>
+        <h2>✨ Nossos Projetos</h2>
+        <p>A "Semente do Bem" concretiza sua missão por meio de iniciativas focadas no acolhimento integral, na educação e no desenvolvimento comunitário. Cada projeto é uma semente plantada em busca de um futuro mais justo e digno.</p>
+
+        <section class="projeto-item">
+            <h3>🌱 1. Mesa Farta</h3>
+            <div class="projeto-conteudo">
+                <img src="imagens/IMG1.png" alt="Voluntários da ONG entregando cestas básicas a famílias.">
+                <div>
+                    <p><strong>Foco:</strong> Combate à Insegurança Alimentar.</p>
+                    <p>Através de parcerias com mercados e produtores, este projeto distribui cestas básicas, refeições e kits de higiene para famílias em extrema vulnerabilidade. Realizamos também oficinas de aproveitamento integral de alimentos, promovendo a sustentabilidade e a saúde.</p>
+                </div>
+            </div>
         </section>
-        <section>
-            <h5>Contato com a ONG lovePETS</h5>
-            <address>
-                <p>Endereço: Rua das Flores, 123 - São Paulo, SP
-                Telefone: (11) 1234-5678
-                Email:ONGLOVEPETS@GMAIL.COM</p>
-                     <footer>
-        <p>&copy; 2025 ONG lovePETS. Todos os direitos reservados.</p>
+
+        <section class="projeto-item">
+            <h3>📚 2. Raízes do Saber</h3>
+            <div class="projeto-conteudo">
+                <img src="imagens/IMG2.png" alt="Crianças e voluntários estudando em uma sala de aula de reforço escolar.">
+                <div>
+                    <p><strong>Foco:</strong> Educação e Capacitação Profissional.</p>
+                    <p>Oferecemos reforço escolar para crianças e adolescentes, além de cursos profissionalizantes de curta duração, como informática básica, culinária e costura. Nosso objetivo é abrir portas para o mercado de trabalho e promover a autonomia.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="projeto-item">
+            <h3>🫂 3. Abraço Amigo</h3>
+            <div class="projeto-conteudo">
+                <img src="imagens/IMG3.png" alt="Um grupo de pessoas participando de uma roda de conversa de apoio emocional.">
+                <div>
+                    <p><strong>Foco:</strong> Suporte Emocional e Bem-Estar.</p>
+                    <p>Com o apoio de psicólogos e assistentes sociais voluntários, este projeto oferece rodas de conversa, grupos de apoio e atendimento individualizado para lidar com questões emocionais e sociais, fortalecendo a saúde mental da comunidade.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta-projeto">
+            <h3>Como Ajudar Estes Projetos?</h3>
+            <p>Seja a força motriz por trás de uma de nossas iniciativas.</p>
+            <div class="cta-actions">
+                <a href="Voluntário.html" class="btn-voluntario">QUERO SER VOLUNTÁRIO</a>
+            </div>
         </section>
     </main>
-    
+
+    <footer>
+        <p>&copy; 2023 Semente do Bem. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
